# fhir-to-brics

./: .cursorignore  .env  .gitignore  README.md  pyproject.toml  requirements.txt
fhir_to_brics/: main.py  utils.py
fhir_to_brics/json_examples/: extension.json  patient_schema.json  us_core_race.json  valueset_flattened.json
fhir_to_brics/output/: patient_des.csv
fhir_to_brics/templates/: ImportUDETemplate.csv  all-profiles.csv
prompts/: system_messages.py
