[tool.poetry]
name = "brics-fhir"
version = "0.0.0"
description = "Implement FHIR resources in BRICS Data Dictionary"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pre-commit = "^3.5.0"
fhir-resources = "^7.0.2"
flatten-json = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
